# rage-messenger

./: .gitignore  README.md  STARTUP.md  package.json
client/: capacitor.config.ts  generate-icon.js  package.json  tailwind.config.js
client/public/: index.html  maintenance.html
client/src/: App.js  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
server/: cleanup-db.js  index.js  package.json  set-developer.js
server/models/: Friend.js  Message.js  User.js
