[package]
name = "rage"
version = "1.0.0"
description = "RAGE Messenger Desktop App"
authors = ["RAGE Team"]
license = ""
edition = "2021"

[lib]
name = "rage_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
